Prevent scrollbars from appearing for QR textarea
This allows the textarea controls to always be visible instead of hiding behind the scrollbars if the textarea gets too tall.

--- a/src/css/Quickreply.css
+++ b/src/css/Quickreply.css
@@ -146,6 +146,9 @@
   transform: rotate(-90deg);
   right: 86%;
 }
+#qr > form {
+  overflow-y: hidden;
+}
 /* Fade QR */
 :root.fade-qr #qr form {
   display: block !important;
